--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Step one
         uses: actions/checkout@v3
       - name: Step two
-        run: "Get-ChildIt Env: | Sort-Object Name"
+        run: "Get-ChildItem Env: | Sort-Object Name"
