--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -14,6 +14,7 @@ jobs:
   job2:
     name: Second job
     runs-on: windows-latest
+    needs: job1
     steps:
       - name: Step one
         uses: actions/checkout@v3
